--- a/index.html
+++ b/index.html
@@ -11,13 +11,26 @@
     <h3>Matematíca 2 - PROGRAMAÇÃO 1 </h3>
 
     <h1> Conhecendo novos países </h1>
-    <h2> 
-        Conhecer novos países é uma experiência enriquecedora que amplia horizontes e enriquece nossa compreensão do mundo. Cada nação tem sua própria cultura, história, culinária e paisagens deslumbrantes. Ao explorar novos destinos, somos presenteados com a oportunidade de vivenciar a diversidade da humanidade.
 
-Além disso, viajar para novos países nos desafia a sair da zona de conforto. Lidar com línguas e costumes diferentes nos obriga a desenvolver habilidades de adaptação e respeito à diversidade. Essas experiências podem nos tornar mais tolerantes e abertos a diferentes perspectivas.
+    <p></p> 
+        Conhecer novos países é uma experiência enriquecedora que amplia horizontes e enriquece nossa compreensão do mundo.
+        Cada nação tem sua própria cultura, história, culinária e paisagens deslumbrantes. 
+        Ao explorar novos destinos, somos presenteados com a oportunidade de vivenciar a diversidade da humanidade.
+    </p> 
 
-Conhecer novos países também permite que criemos memórias inesquecíveis. Desde admirar monumentos icônicos até compartilhar momentos com pessoas locais, cada viagem oferece a oportunidade de crescer, aprender e se inspirar. Portanto, explorar o mundo é mais do que apenas visitar lugares; é uma jornada que nos transforma e nos conecta ao vasto e belo mosaico global.
-    </h2>
+    <p>
+        Além disso, viajar para novos países nos desafia a sair da zona de conforto. 
+        Lidar com línguas e costumes diferentes nos obriga a desenvolver habilidades de adaptação e respeito à diversidade. 
+        Essas experiências podem nos tornar mais tolerantes e abertos a diferentes perspectivas.
+    </p>
+
+    <p>
+        Conhecer novos países também permite que criemos memórias inesquecíveis. 
+        Desde admirar monumentos icônicos até compartilhar momentos com pessoas locais, cada viagem oferece a oportunidade de crescer, aprender e se inspirar. 
+        Portanto, explorar o mundo é mais do que apenas visitar lugares; é uma jornada que nos transforma e nos conecta ao vasto e belo mosaico global.
+    </p>
+
+    
     
 </body>
 </html>
