--- a/index.html
+++ b/index.html
@@ -30,7 +30,21 @@
         Portanto, explorar o mundo é mais do que apenas visitar lugares; é uma jornada que nos transforma e nos conecta ao vasto e belo mosaico global.
     </p>
 
-    
+    <p>
+        Viagens têm o poder de nos transportar para além dos limites familiares e das paisagens cotidianas. 
+        Elas nos oferecem uma paleta diversificada de experiências, desde explorar maravilhas naturais até mergulhar nas culturas de destinos distantes. 
+        As viagens são a promessa de aventuras e descobertas, enriquecendo nossas vidas de maneiras incontáveis.
+    </p>
+
+    <p>
+        Além disso, as viagens nos permitem criar memórias duradouras. 
+        Seja desfrutando de iguarias locais, admirando monumentos icônicos ou compartilhando histórias com pessoas de diferentes origens, 
+        essas experiências enriquecem nossas vidas. Viajar é uma jornada que nos conecta com o nosso planeta, com outras pessoas e, acima de tudo, 
+        com nós mesmos, lembrando-nos de que o mundo é vasto e repleto de beleza esperando para ser explorada.
+    </p>
+
+    <img src="" alt="">
+
     
 </body>
 </html>
