--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         com nós mesmos, lembrando-nos de que o mundo é vasto e repleto de beleza esperando para ser explorada.
     </p>
 
-    <img src="" alt="">
+    <img src="roteiro.jpeg" alt="">
 
     
 </body>
