--- a/index.html
+++ b/index.html
@@ -45,6 +45,16 @@
 
     <img src="roteiro.jpeg" alt="">
 
+    <h2> Lugares Interessantes em varias cidades </h2>
+
+    <ul>
+
+    <li> Cruzeiro com jantar por Dubai </li>
+    <li> Angkor Wat – Camboja </li>
+    <li>  Lago Moraine – Canadá </li>
+    <li> Algarve, Portugal </li>
+
+</ul>
     
 </body>
 </html>
