--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Revisao Ariane</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1> Ariane Beatriz Rodrigues de Lara </h1>
@@ -12,7 +13,7 @@
 
     <h1> Conhecendo novos países </h1>
 
-    <p></p> 
+    <p>
         Conhecer novos países é uma experiência enriquecedora que amplia horizontes e enriquece nossa compreensão do mundo.
         Cada nação tem sua própria cultura, história, culinária e paisagens deslumbrantes. 
         Ao explorar novos destinos, somos presenteados com a oportunidade de vivenciar a diversidade da humanidade.
@@ -44,6 +45,11 @@
     </p>
 
     <img src="roteiro.jpeg" alt="">
+    <img src="img1.jpg" alt="">
+    <img src="img2.png" alt="">
+    <img src="img3.webp" alt="">
+    <img src="img4.jpeg" alt="">
+    <img src="img5.jpg" alt="">
 
     <h2> Lugares Interessantes em varias cidades </h2>
 
