--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <ul>
 
     <li> Cruzeiro com jantar por Dubai </li>
+    <img src="cruzeiro.avif" alt="">
     <li> Angkor Wat – Camboja </li>
     <li>  Lago Moraine – Canadá </li>
     <li> Algarve, Portugal </li>
