--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <li> Cruzeiro com jantar por Dubai </li>
     <img src="cruzeiro.avif" alt="">
     <li> Angkor Wat – Camboja </li>
+    <img src="img6.html" alt="">
     <li>  Lago Moraine – Canadá </li>
     <li> Algarve, Portugal </li>
 
