--- a/index.html
+++ b/index.html
@@ -56,15 +56,11 @@
     <ul>
 
     <li> Cruzeiro com jantar por Dubai </li>
-
     <img src="cruzeiro.avif" alt="">
-
     <li> Angkor Wat – Camboja </li>
-
     <img src="img6.jpg" alt="">
-
     <li>  Lago Moraine – Canadá </li>
-    
+    <img src="img7.webp" alt="">
     <li> Algarve, Portugal </li>
 
 </ul>
