--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     <li>  Lago Moraine – Canadá </li>
     <img src="img7.webp" alt="">
     <li> Algarve, Portugal </li>
+    <img src="img8.jpg" alt="">
 
 </ul>
 
